# bevy_compute_shader

./: CNAME  Cargo.toml  Trunk.toml  bevy_compute_shader-581bab24a49e81b0.js  build_wasm.sh  index copy.html  index.html
.cargo/: config.toml
.github/workflows/: deploy.yml
_src/: gui.rs  main.rs  parameters.rs
_src/gradient_editor/: cache.rs  gradient.rs  mod.rs  updater.rs  widget.rs
_src/shaders/: ca_prepare.wgsl  ca_run.wgsl  domain_warp_1.wgsl  domain_warp_2.wgsl  extract.wgsl  generate_circle.wgsl  jump_flood_prepare.wgsl  jump_flood_run.wgsl
assets/shaders/: blur.wgsl  ca_post.wgsl  ca_prepare.wgsl  ca_run.wgsl  common.wgsl  domain_warp_1.wgsl  domain_warp_2.wgsl  extract.wgsl  generate_circle.wgsl  gpu_circle.wgsl  gpu_readback.wgsl  init_generate_circle.wgsl  init_generate_heights.wgsl  jump_flood_prepare.wgsl  jump_flood_run.wgsl  second_pass.wgsl  solidify.wgsl  subtract_caves.wgsl
assets/shaders/utils/: fbm.wgsl  noise.wgsl
src/: bind_groups.rs  cam_controller.rs  compute_node.rs  compute_plugin.rs  constants.rs  data_structures.rs  events.rs  gpu_compute.rs  gpu_reaback copy.rs  gpu_reaback.rs  gpu_readback.rs  gui.rs  main copy.rs  main.rs  parameters.rs  pipeline.rs  resources.rs
src/gradient_editor/: gradient.rs  mod.rs  updater.rs
src/shaders/: 3rd_pass.wgsl  ca.wgsl  ca_post.wgsl  common.wgsl  domain_warp.wgsl  domain_warp_2.wgsl  extract.wgsl  generate_circle.wgsl  jump_flood_prepare.wgsl  pre_ca_noise.wgsl
src/shaders/utils/: anal_noise.wgsl  noise.wgsl  utils.wgsl
