[package]
name = "bevy_compute_shader"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.15.0", features =["webgpu"]}
bevy_egui = "0.31.1"
bytemuck = "1.20.0"

wasm-bindgen = "0.2.97"

# bevy = "0.14.2"

# crossbeam-channel = "0.5.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
